k8s/ise-mock.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ise-mock-service
spec:
  selector:
    app: ise-mock
  ports:
  - port: 8080
    targetPort: 8080
