k8s/ise-mock.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ise-mock-ingress
  labels:
    name: ise-mock-ingress
    project: Lame-Wayne
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web # Ustawienie entrypointu dla Traefika (domyślnie "web" lub "websecure")
spec:
  rules:
    - host: ise.mock
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ise-mock-service
                port:
                  number: 8080
